scripts/local_k8s_cluster_network_policies.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: local-path-storage-network-policy
  namespace: local-path-storage
spec:
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - 10.0.0.0/8
          - 172.16.0.0/12
          - 192.168.0.0/16
        ports:
          - 6443
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-system-allow-all
  namespace: calico-system
spec:
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
  egress:
    - action: Allow
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: tigera-operator-allow-all
  namespace: tigera-operator
spec:
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
  egress:
    - action: Allow
